k8s/worker-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: imgr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: worker
                topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: registry-creds
      containers:
        - name: worker
          image: registry.app.unistra.fr/waltzing/projet-cloud-virt/worker:v1
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
