k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: imgr
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 8080
