k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: imgr
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 8081
